[gd_scene load_steps=17 format=2]

[ext_resource path="res://scenes/Planet.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/RosePlanet.gd" type="Script" id=2]
[ext_resource path="res://art/rosetalker.png" type="Texture" id=3]
[ext_resource path="res://scenes/Orbit.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/EarthOrb.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/dialogue/DialogueManager.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/WaterOrb.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/LightOrb.tscn" type="PackedScene" id=8]
[ext_resource path="res://art/rose-orb.png" type="Texture" id=9]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 9, 0, 9, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 9, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 9, 0, 9, 16 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "talking",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=6]
radius = 7.0

[sub_resource type="Animation" id=8]
resource_name = "rose_leaves"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D/AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -10 ), Vector2( 0, -200 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "rose_undocks"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D/AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1.5, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -10 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Node2D/AnimatedSprite/Bubble:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="RosePlanet" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Node2D" type="Node2D" parent="." index="2"]
position = Vector2( 10, -30 )
rotation = 0.29893

[node name="AnimatedSprite" type="AnimatedSprite" parent="Node2D" index="0"]
position = Vector2( 0, -0.0255573 )
frames = SubResource( 5 )
animation = "idle"
playing = true

[node name="OrbitCenter" type="Node2D" parent="Node2D/AnimatedSprite" index="0"]
rotation = -0.29893

[node name="Orbit" parent="Node2D/AnimatedSprite/OrbitCenter" index="0" instance=ExtResource( 4 )]
position = Vector2( 13, 4 )

[node name="EarthOrb" parent="Node2D/AnimatedSprite/OrbitCenter/Orbit" index="1" instance=ExtResource( 5 )]
visible = false
scale = Vector2( 0.5, 0.5 )
orbit = true

[node name="WaterOrb" parent="Node2D/AnimatedSprite/OrbitCenter/Orbit" index="2" instance=ExtResource( 7 )]
visible = false
scale = Vector2( 0.5, 0.5 )
orbit = true
starting_point = 0.33

[node name="LightOrb" parent="Node2D/AnimatedSprite/OrbitCenter/Orbit" index="3" instance=ExtResource( 8 )]
visible = false
scale = Vector2( 0.5, 0.5 )
orbit = true
starting_point = 0.66

[node name="Bubble" type="Sprite" parent="Node2D/AnimatedSprite" index="1"]
self_modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 9 )

[node name="DialogSpot" type="Node2D" parent="Node2D/AnimatedSprite" index="2"]
position = Vector2( -38.1833, -59.3633 )
rotation = -0.29893

[node name="PlayerDetector" type="Area2D" parent="." index="3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector" index="0"]
position = Vector2( -10, -30 )
shape = SubResource( 6 )

[node name="DialogueManager" parent="." index="4" instance=ExtResource( 6 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="5"]
anims/rose_leaves = SubResource( 8 )
anims/rose_undocks = SubResource( 7 )

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_PlayerDetector_body_exited"]
[connection signal="finished" from="DialogueManager" to="." method="_on_DialogueManager_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
